<resources>
    <string name="app_name">ThirdPartyLibraryDependencies</string>
    <string name="dependency_injection">Dependency Injection</string>
    <string name="dagger">Dagger</string>
    <string name="air_condition">Air condition</string>
    <string name="car_sample">Car sample</string>
    <string name="air_condition_sample">Air condition sample</string>
    <string name="car_sample_by_di">Car sample by Di</string>
    <string name="coroutine">Coroutine</string>
    <string name="coroutine_scope">Coroutine Scope</string>
    <string name="fake_api">Fake API</string>
    <string name="progressbar">ProgressBar</string>
    <string name="start">start</string>
    <string name="simple">Simple</string>
    <string name="field_injection">Field Injection</string>
    <string name="constructor_injection">Constructor Injection</string>
    <string name="interface_injection">Interface Injection</string>
    <string name="method_injection">Method Injection</string>
    <string name="car_field_injected_class">Car Field Injected Class</string>
    <string name="abstract_injection">Abstract Injection</string>
    <string name="singleton">Singleton</string>
    <string name="retrofit">Retrofit</string>
    <string name="graphql">GraphQl</string>
    <string name="apollo">Apollo</string>
    <string name="apollo_site_sample">Apollo site sample</string>
    <string name="weather_sample">Weather sample</string>
    <string name="rest_retro_java">Rest Retro Java</string>
    <string name="rest_retro_standard">Rest retro standard</string>
    <string name="rest_retro_dagger">Rest Retro Dagger</string>
    <string name="your_web_client_id">771210793489-vqnqh6rjomijialjk6lbqi3l67ndbnvo.apps.googleusercontent.com</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="firebase_authenticate">Firebase authenticate</string>
    <string name="rx_java">RX Java</string>
    <string name="just_observable">Just observable</string>
    <string name="click">Click</string>
    <string name="retrofit_rx_java">RetrofitRxJava</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="firebase_fmc">Firebase FMC</string>
    <string name="fmc">FMC</string>
    <string name="authenticate">Authenticate</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="firebase">Firebase</string>
    <string name="manual_crash">Manual Crash</string>
    <string name="analytics">Analytics</string>
    <string name="action">Action</string>
    <string name="google_map">Google Map</string>
    <string name="loaded">loaded</string>
    <string name="single_thread">Single thread</string>
    <string name="calculate">Calculate</string>
    <string name="start_number_k">Start Number K(*1000)</string>
    <string name="multi_thread">Multi Thread</string>
    <string name="end_number_million">End Number Million</string>
    <string name="camera_x">Camera X</string>
    <string name="run_blocking">Run Blocking</string>
    <string name="run_blocking_entire_fun">Run Blocking entire fun</string>
    <string name="runblocking">RunBlocking</string>
    <string name="job">Job</string>
    <string name="simple_job">Simple Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="cancel_block_scope_issue">Cancel Block Scope Issue</string>
    <string name="cancel_block_scope">Cancel Block Scope</string>
    <string name="cancel_exception_message">Cancel Exception Message</string>
    <string name="cancel_time_out_custom_exception">Cancel Time Out Custom Exception</string>
    <string name="read_thread_name">Read thread name</string>
    <string name="unconfined_dispatcher">Unconfined Dispatcher</string>
    <string name="access_job_in_itself">Access job in itself</string>
    <string name="stop_bg_service">stop bg service</string>
    <string name="service_status">service status</string>
    <string name="start_bg_service_bg">start BG service in background</string>
    <string name="start_bg_service_bg_legal">start BG service in background legal</string>
    <string name="stop_bg_service_bg">stop BG service in background</string>
    <string name="start_bg_service_fg">start BG service in foreground</string>
    <string name="start_foreground">start foreground</string>
    <string name="stop_fg_service">stop fg service</string>
    <string name="send">Send</string>
    <string name="channel">Channel</string>
    <string name="send_receive">Send/Receive</string>
    <string name="send_as_flow">Send/As Flow</string>
    <string name="courier">Courier</string>
    <string name="send_message">send message</string>
    <string name="signout">SignOut</string>
    <string name="signin">SignIn</string>
    <string name="message_text">Message text</string>
    <string name="rxjava_simple_activity">RxJava Simple Activity</string>
    <string name="subscribe">subscribe</string>
    <string name="map">map</string>
    <string name="flat_map">Flat map</string>
    <string name="do_on_next">Do on next</string>
    <string name="compose_learn">Compose learn</string>
    <string name="single_transform">Single transform</string>
    <string name="event_bus">Event_Bus</string>
    <string name="io_dispatcher_life_test">IO Dispatcher life test</string>
    <string name="simple_event_bus">Simple Event Bus</string>
    <string name="complex_event_bus">Complex Event Bus</string>
    <string name="complex_event_bus_count_values">Complex Event Bus count values</string>
    <string name="complex_event_bus_reset_count_values">Complex Event Bus reset count values</string>
    <string name="complex_event_bus_cancel_view_model_scope">Complex Event Bus cancel view model scope</string>
    <string name="completable_blocking_await">completable blocking await</string>
    <string name="rxjava_zip">RxJava zip</string>
    <string name="rxjava_next">RxJava Next</string>
    <string name="basic_auth_call">BasicAuth Call</string>
    <string name="no_auth">No Auth</string>
    <string name="retro_callback">Retro CallBack</string>
    <string name="coroutine_start">Coroutine Start</string>
    <string name="without_coroutine_start">Without Coroutine Start</string>
    <string name="coroutines_includes_result">Coroutines Includes Result</string>
</resources>