<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Button
        android:id="@+id/btn_di"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dependency_injection"/>

    <Button
        android:id="@+id/btn_coroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coroutine"/>

    <Button
        android:id="@+id/btn_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrofit"/>

    <Button
        android:id="@+id/btn_graphql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphql"/>

    <Button
        android:id="@+id/btn_apollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apollo"/>

    <Button
        android:id="@+id/btn_rest_retro_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_retro_java"/>

    <Button
        android:id="@+id/btn_rest_retro_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_retro_standard"/>

    <Button
        android:id="@+id/btn_rest_retro_dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_retro_dagger"/>

    <Button
        android:id="@+id/btn_firebase_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase_authenticate"/>

</androidx.appcompat.widget.LinearLayoutCompat>