<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="alidoran.di.DiActivity">

    <Button
        android:id="@+id/btn_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple"/>

    <Button
        android:id="@+id/btn_constructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constructor_injection"/>

    <Button
        android:id="@+id/btnField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_injection"/>

    <Button
        android:id="@+id/btn_interface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interface_injection"/>

    <Button
        android:id="@+id/btn_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method_injection"/>

    <Button
        android:id="@+id/btn_field_injected_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_field_injected_class"/>

    <Button
        android:id="@+id/btn_abstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abstract_injection"/>

    <Button
        android:id="@+id/btn_singleton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleton"/>

</LinearLayout>