<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".firebase.FirebaseActivity">

    <Button
        android:id="@+id/btn_analytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics"/>

    <Button
        android:id="@+id/btn_fmc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fmc"/>

    <Button
        android:id="@+id/btn_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authenticate"/>

    <Button
        android:id="@+id/btn_crashlytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crashlytics"/>


</androidx.appcompat.widget.LinearLayoutCompat>