<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".apis.rest.retro_standard.RetrofitActivity">

    <Button
        android:id="@+id/btn_call_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retro_callback"/>

    <Button
        android:id="@+id/btn_no_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_auth"/>

    <Button
        android:id="@+id/btn_basic_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_auth_call"/>

</androidx.appcompat.widget.LinearLayoutCompat>