<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".multithreading.coroutines.CoroutineActivity">

    <Button
        android:id="@+id/btn_fake_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_api"/>

    <Button
        android:id="@+id/btn_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progressbar"/>

    <Button
        android:id="@+id/btn_run_blocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runblocking"/>


</androidx.appcompat.widget.LinearLayoutCompat>