<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".rx_java.RxJavaActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/btn_just_observable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_observable"
        />

    <Button
        android:id="@+id/btn_retrofit_rx_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_rx_java"/>

        <Button
            android:id="@+id/btn_rx_java_simple_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rxjava_simple_activity"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>